# nablex

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  weekly.yml
src/: main.rs  parallel.rs
tests/: command.rs
tests/fixtures/: example.color.patch  example.context0.patch  example.label.patch  example.label_old_only.patch
